2018-01-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/sha2.c: Comment-out three unused 'const static' variables

2018-01-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.6.15

	* R/sha1.R (sha1.POSIXlt): Unclass POSIXlt objects as suggested by
	Kurt Hornik to accomodate R-devel changes

	* tests/sha1Test.R: Condition one sha1 test seemingly affected by
	R-devel serialization changes to run only with R < 3.5.0

2018-01-21  Thierry Onkelinx  <thierry.onkelinx@inbo.be>

	* sha1() gains an `algo` argument
	* sha1() handles raw class

2018-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.6.14

	* man/AES.Rd: Use https for nist.gov reference
	* man/digest.Rd: Idem
	* man/hmac.Rd: Idem

	* man/digest.Rd: Use Wikiepedia page as reference for SHA1 as the
	reference page at NIST has (long) vanished.
	* man/hmac.Rd: Idem

2018-01-12  Thierry Onkelinx  <thierry.onkelinx@inbo.be>

	* sha1() handles empty matrices

2017-12-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/raes.c (AESencryptECB,AESdecryptECD): Replace two uses of NAMED
	with MAYBE_REFERENCED

2017-12-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Release 0.6.13

2017-12-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): New minor version

	* R/digest.R: Support serializeVersion format
	* man/digest.Rd: Document new option

	* R/init.R: Set a default version, and internal getter function

2017-10-12  Chris Muir  <chrismuirRVA@gmail.com>

	* vignette/sha1.Rmd: Correct simple typo

2017-11-16  Moritz Beller  <Inventitech@users.noreply.github.com>

	* man/digest.Rd: Replace old Google Code URLs with GitHub ones

2017-02-20  Dirk Eddelbuettel  <edd@debian.org>

	* man/digest.Rd: Expand example section with a Vectorize() use

2017-01-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* man/digest.Rd: Note that support for 'raw' is not available for all